# cli

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: cgride-cli-config.cmake.in
include/cgride/: cli.hpp
include/cgride/cli/: application.hpp  build_command.hpp  cli_options.hpp  command_context.hpp  command_line.hpp  exit_code.hpp  run_command.hpp  terminal.hpp  version.hpp
src/: application.cpp  build_command.cpp  cli_options.cpp  command_context.cpp  command_line.cpp  exit_code.cpp  main.cpp  project_loader.cpp  project_loader.hpp  run_command.cpp  terminal.cpp
tests/: CMakeLists.txt  application_test.cpp  cli_options_test.cpp  command_line_test.cpp  exit_code_test.cpp  terminal_test.cpp
